[gd_scene load_steps=31 format=2]

[ext_resource path="res://assets/All Assets/Character/Character1-2_Object1-3/Character1-2_Object1-3_2/E1.png" type="Texture" id=1]
[ext_resource path="res://script/enemy1.gd" type="Script" id=2]
[ext_resource path="res://script/KinematicBody2D_enemy1.gd" type="Script" id=3]
[ext_resource path="res://script/Navigation2Denemy1.gd" type="Script" id=4]
[ext_resource path="res://scene/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://scene/background.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/All Assets/Character/D4.png" type="Texture" id=7]
[ext_resource path="res://assets/All Assets/Character/C1.png" type="Texture" id=8]
[ext_resource path="res://script/battle.gd" type="Script" id=9]
[ext_resource path="res://script/enemy1_bullet1.gd" type="Script" id=10]
[ext_resource path="res://script/bullet2.gd" type="Script" id=11]
[ext_resource path="res://script/save_game.gd" type="Script" id=12]
[ext_resource path="res://assets/All Assets/Character/Character1-2_Object1-3/Character1-2_Object1-3_2/F1.png" type="Texture" id=13]
[ext_resource path="res://assets/All Assets/Character/Character1-2_Object1-3/Character1-2_Object1-3_2/D4.png" type="Texture" id=14]
[ext_resource path="res://assets/All Assets/Character/Character1-2_Object1-3/Character1-2_Object1-3_2/O5.png" type="Texture" id=15]
[ext_resource path="res://assets/All Assets/Character/Character1-2_Object1-3/Character1-2_Object1-3_2/G1.png" type="Texture" id=16]
[ext_resource path="res://assets/All Assets/Character/Character1-2_Object1-3/Character1-2_Object1-3_2/O4.png" type="Texture" id=17]
[ext_resource path="res://assets/All Assets/Character/Character1-2_Object1-3/Character1-2_Object1-3_2/O6.png" type="Texture" id=18]
[ext_resource path="res://assets/All Assets/Character/Character1-2_Object1-3/Character1-2_Object1-3_2/H1.png" type="Texture" id=19]

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 128, 69 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 46 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 128, 52 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 128, 52 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 0, 0, 128, 57 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 64, 56 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "boss1",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "boss2",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "boss3",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "boss4",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "boss5",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "one",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "two",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "three",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 210.58, 126.828 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 114.776, 114.748 )

[node name="enemy1" type="Node2D"]
position = Vector2( 0.00508404, -0.0575438 )
script = ExtResource( 2 )
save_game = ExtResource( 12 )

[node name="Navigation2D" type="Navigation2D" parent="."]
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="KinematicBody2D" type="KinematicBody2D" parent="Navigation2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Navigation2D/KinematicBody2D"]
position = Vector2( 0, 8.48529 )
scale = Vector2( 1.4, 1.4 )
frames = SubResource( 2 )
animation = "boss5"

[node name="RayCast2D" type="RayCast2D" parent="Navigation2D/KinematicBody2D"]
position = Vector2( -70.7969, 12.421 )
rotation = -1.5708
scale = Vector2( 7, 2.4 )
enabled = true

[node name="RayCast2D2" type="RayCast2D" parent="Navigation2D/KinematicBody2D"]
position = Vector2( 69.0543, 7.38134 )
rotation = 1.5708
scale = Vector2( 7, 2.4 )
enabled = true

[node name="HUD" parent="Navigation2D/KinematicBody2D" instance=ExtResource( 5 )]
position = Vector2( -38.872, -66.7511 )
scale = Vector2( 0.4, 0.5 )

[node name="battle" type="Node" parent="."]
script = ExtResource( 9 )

[node name="BackGround" parent="battle" instance=ExtResource( 6 )]
visible = false

[node name="HUD1" parent="battle/BackGround" instance=ExtResource( 5 )]
position = Vector2( 35, 30 )

[node name="HUD2" parent="battle/BackGround" instance=ExtResource( 5 )]
position = Vector2( 786, 30 )

[node name="bullet1" type="Node2D" parent="battle/BackGround"]
script = ExtResource( 10 )

[node name="bullet2" type="Node2D" parent="battle/BackGround"]
script = ExtResource( 11 )

[node name="player" type="Sprite" parent="battle/BackGround"]
position = Vector2( 154.841, 336.31 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 8 )

[node name="enemy" type="Sprite" parent="battle/BackGround"]
position = Vector2( 835.61, 336.38 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[node name="Area2D" type="Area2D" parent="battle/BackGround"]
position = Vector2( 835.61, 336.38 )
scale = Vector2( 0.7, 0.7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="battle/BackGround/Area2D"]
position = Vector2( 3.18408, 10.4694 )
shape = SubResource( 3 )

[node name="Area2D2" type="Area2D" parent="battle/BackGround"]
position = Vector2( 0.00508404, -0.0575438 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="battle/BackGround/Area2D2"]
position = Vector2( 161.444, 347.88 )
scale = Vector2( 0.7, 0.7 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
